add project running info in Home page

--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -44,6 +44,7 @@
         <script src="/static/js/bootstrap.min.js"></script>
         <script src="/static/js/bootstrap-select.min.js"></script>
         <script src="/static/js/jquery.bootstrap.min.js"></script>
+        <script src="/static/js/jquery.tabledit.min.js"></script>
         <script src="/static/tbd/js/user_js.js"></script>
         {% block user_js %}{% endblock %}
     </body>
