--- a/tbd/templates/tbd/home.html
+++ b/tbd/templates/tbd/home.html
@@ -12,7 +12,7 @@
                 <td>OS type</td>
                 <td>OS verison</td>
                 <td>Board type</td>
-                <td>Chip MCN</td>
+                <td>MTBF</td>
             </thead>
             <tbody>
                 {% for prj in page.items %}
