fix duplicate edit form+support edit except cs date

--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -46,7 +46,7 @@
         <script src="/static/js/jquery-ui.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
         <script src="/static/js/bootstrap-select.min.js"></script>
-        <script src="/static/js/jquery.bootstrap.min.js"></script>
+<!--        <script src="/static/js/jquery.bootstrap.min.js"></script>-->
         <script src="/static/js/jquery.tabledit.min.js"></script>
         <script src="/static/js/jquery.jtable.js"></script>
         <script src="/static/tbd/js/user_js.js"></script>
