--- a/tbd/templates/tbd/home.html
+++ b/tbd/templates/tbd/home.html
@@ -4,7 +4,6 @@
 
 {% block content %}
     <div class="container">
-        <div id="StudentTableContainer"></div>
         <div id="RunningProjectContainer"></div>
         <!--
         <table id="id_project_running_table" class="table table-hover">
@@ -67,37 +66,6 @@
 <script type="text/javascript">
     var cachedBuildOptions = {};
     $(function(){
-        $('#StudentTableContainer').jtable({
-            title: 'The Student List',
-            paging: true, //Enable paging
-            pageSize: 10, //Set page size (default: 10)
-            sorting: true, //Enable sorting
-            defaultSorting: 'Name ASC', //Set default sorting
-            actions: {
-                listAction: '/ajax/StudentList',
-                //deleteAction: '/Demo/DeleteStudent',
-                updateAction: '/ajax/UpdateStudent',
-                //createAction: '/Demo/CreateStudent'
-            },
-            fields: {
-                StudentId: {
-                    key: true,
-                    create: false,
-                    edit: false,
-                    list: false
-                },
-                Name: {
-                    title: 'Name',
-                    width: '23%'
-                }
-            }
-        });
- 
-        //Load student list from server
-        $('#StudentTableContainer').jtable('load');
-        
-        
-        
         $('#RunningProjectContainer').jtable({
             title: 'Project Running Information',
             ajaxSettings: {
@@ -115,21 +83,23 @@
                 //deleteAction: '/ajax/DeletePerson'
             },
             fields: {
-                prj_name: {
+                prj_id: {
                     key: true,
+                    list: false
+                },
+                prj_name: {
                     title: 'Project',
                     width: '10%',
-                    edit: false
                 },
                 running_build: {
                     title: 'Build',
                     width: '30%',
                     options: function (data) {
                         console.log(data);
-                        if ('prj_name' in data.record) {
-                            if (data.record.prj_name in cachedBuildOptions) {
-                                console.log("return cached build for project " + data.record.prj_name + "!");
-                                return cachedBuildOptions[data.record.prj_name];
+                        if ('prj_id' in data.record) {
+                            if (data.record.prj_id in cachedBuildOptions) {
+                                console.log("return cached build for project id " + data.record.prj_id + "!");
+                                return cachedBuildOptions[data.record.prj_id];
                             }
                         }
                         else {
@@ -141,7 +111,7 @@
                             url: '/ajax/running_project_list_builds',
                             type: 'POST',
                             dataType: 'json',
-                            data: {'prj_name': data.record.prj_name},
+                            data: {'prj_id': data.record.prj_id},
                             async: false,
                             beforeSend: function(xhr, settings){
                                 xhr.setRequestHeader("X-CSRFToken", get_cookie('csrftoken'));  
@@ -155,7 +125,7 @@
                                 options = data.Options;
                             }
                         });
-                        return cachedBuildOptions[data.record.prj_name] = options; //Cache results and return options
+                        return cachedBuildOptions[data.record.prj_id] = options; //Cache results and return options
                     }
                 },
                 cs_date: {
